<resources>
    <string name="application_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>

    <string name="menu_title">My Nanodegree Apps!</string>

    <!-- Strings for application names : Begin -->
    <string name="app_spotify">"Spotify Streamer"</string>
    <string name="app_superduo">"Super Duo"</string>
    <string name="app_build">"Build It Bigger"</string>
    <string name="app_xyz">"XYZ Reader"</string>
    <string name="app_capstone">"Capstone "</string>
    <!-- Strings for application names : End -->

</resources>
