<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_spotify"
        android:id="@+id/spotify"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/orange"
        android:width="240dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_superduo"
        android:id="@+id/superduo"
        android:layout_below="@+id/spotify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/orange"
        android:width="240dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_build"
        android:id="@+id/build"
        android:layout_below="@+id/superduo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/orange"
        android:width="240dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_xyz"
        android:id="@+id/xyz"
        android:layout_below="@+id/build"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/orange"
        android:width="240dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_capstone"
        android:id="@+id/capstone"
        android:layout_below="@+id/xyz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/orange"
        android:width="240dp"/>

</RelativeLayout>
